# paido_backend

./: README.md  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 3cd8da4f4294_add_table_users.py  4f7071736ac8_create_users_table.py  62e11c52fe06_add_field_updated_at_users_table.py  e92be4825451_db_init.py  ec901d3b4140_db_init.py
paido_backend/: app.py  database.py  models.py  schemas.py  security.py  settings.py
paido_backend/routers/: auth.py  users.py
paido_core/: app.py  pyproject.toml  schemas.py  security.py
paido_core/routers/: auth.py  users.py
paido_core/src/paido_core/: app.py  models.py  schemas.py  security.py  settings.py
paido_core/src/paido_core/routers/: auth.py
paido_core/tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_users.py
tests/: conftest.py  test_app.py  test_auth  test_auth.py  test_db.py  test_security.py  test_users.py
